watch list impl

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <button type="button" class="horizontalButtons" id="daily">Daily</button>
     <button type="button" class="horizontalButtons" id="weekly">Weelky</button>
     <button type="button" class="horizontalButtons" id="monthly">Monthly</button>
-
-    <button type="button" class="horizontalButtons buttonSpace" id="filler">+ Watch-list</button>
+    <button type="button" class="horizontalButtons buttonSpace" id="wl">+ Watch-list</button>
   </div>
   <!-- BUTTON GROUP ABOVE -->
 
@@ -39,8 +38,8 @@
     <div id="viz-chart"></div>
     <!-- SVG GOES IN THIS DIV ABOVE -->
     <div id="watch-list">
-      <li id="1">1</li>
-      <li id="2">2</li>
+      <ul class="wlItems">
+      </ul>
 
 
     </div>
